<resources>
    <string name="app_name">Bronco Unleashed</string>
    <string name="cancel">Back</string>
    <string name="apply">Apply</string>

    <string name="about">About app</string>

    <string name="speed_setting">Speed setting</string>
    <string name="set_new_max_speed">Speed limit</string>
    <string name="kmh">km/h</string>
    <string name="reset_speed">Reset speed</string>
    <string name="reset_speed_long">Reset to 25 km/h</string>

    <string name="dashboard">Dashboard</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>

    <string name="cby_discovery_label">Discovery</string>
    <string name="how_to_connect">Make sure Bluetooth is turned on and your bike is paired with the Cowboy app.</string>
    <string name="disconnect">Disconnect</string>

    <string name="service_is_running">Service is running</string>
    <string name="not_connected">Not connected</string>
    <string name="bike_is_locked">Bike is locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="cycled">cycled</string>
    <string name="uptime">up</string>
    <string name="battery">battery</string>

    <string name="disable_speed_limit">Fully disable speed limit</string>
    <string name="caution_motor">This may void your warranty</string>
    <string name="disable_speed_limit_explanation">
        You are about to fully remove speed restriction on the bike.\n\nThis prevents the official app from
        reapplying it and can only be reverted using Bronco Unleashed.\n\nProceed at your own risk.
    </string>
    <string name="proceed">Proceed</string>
    <string name="abort">Abort</string>
    <string name="enable_speed_limit">Enable speed limit</string>
    <string name="disabled_in_motor">Speed limit has been disabled. Your bike is unrestricted.</string>

    <string name="about_title">About</string>
    <string name="credits">
        Original speed hack and app by runereader for /r/cowboybikes\n\nMotor hack by ImaginousDev\n\nUse at your own risk!
    </string>
    <string name="visit_sub">Visit sub</string>
    <string name="got_it">Got it</string>

    <string name="bluetooth_off">Bluetooth is disabled</string>
    <string name="reading_from_bike">Retrieving data</string>
    <string name="login_text">You can provide your CBY credentials to view detailed information about your bike.</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="cby_user_details">Bike details</string>
    <string name="log_out">Log out</string>
    <string name="log_in_with_cby">Log in with CBY</string>

    <string name="bike_name">Bike name</string>
    <string name="location">Location</string>
    <string name="last_seen">Last seen</string>
    <string name="total_distance">Total distance</string>
    <string name="co2_saved">CO2 saved</string>
    <string name="coords">Coordinates</string>
    <string name="bike_battery">Bike battery level</string>
    <string name="pcb_battery">Backup PCB battery</string>
    <string name="range_estimate">Estimated range with current use</string>
    <string name="serial_number">Serial number</string>
    <string name="color">Color</string>
    <string name="mac_address">MAC address</string>
    <string name="firmware_version">Firmware version</string>
    <string name="activated_at">Activated at</string>
    <string name="market">Market</string>
    <string name="pairing_code">Pairing code</string>

    <string name="your_password_is_never_stored">Bronco Unleashed will never store your password.</string>
    <string name="retry_scan">Retry scan</string>
    <string name="no_devices">No devices found. Try to move closer to your bike.</string>

    <string name="field_weakening">Field weakening</string>
    <string name="caution_battery">This setting has side effects</string>
    <string name="field_weakening_layman_explanation">
        Field weakening enables higher motor speeds by reducing back current resulting from the motor having to overcome
        passive magnetic field generated by fixed magnets in its casing.
    </string>
    <string name="field_weakening_disclaimer">
        Field weakening puts extra strain on battery and reduces the bike\'s range.\n\nIn CBY app, the range remaining
        indicator may no longer be accurate.\n\nLong-term effects of this setting on battery life are unknown.
    </string>

    <string name="settings">Options</string>
    <string name="description_speed_setting">Change maximum speed or disable speed limit completely</string>
    <string name="description_field_weakening">Set how much the motor controller should compensate for back EMF current</string>
    <string name="description_bike_details">Check last location and other details of your bike (requires login)</string>
    <string name="description_disconnect">Will send you back to discovery screen</string>
    <string name="description_about">Credits and links</string>
    <string name="unlock_for_more_options">Some settings are unavailable when the bike is locked.</string>

    <string name="arbitrary_register_read">Read ASI register</string>
    <string name="description_arbitrary_register_read">Read value of arbitrary ASI register. Useful for tuning, diagnostics and debugging.</string>

    <string name="auto_lock">Auto lock timer</string>
    <string name="description_auto_lock">Automatically lock the bike after set number of minutes of inactivity</string>
    <string name="off">Off</string>
    <string name="disabled">Disabled</string>
    <string name="number_minutes">%s minutes</string>

    <string name="read_register">Read ASI register</string>
    <string name="parsed_value">Read value</string>
    <string name="warning_developer_option">⚠ developer feature ⚠</string>

    <string name="version">App version</string>

    <string name="standstill_optimization">Initial torque</string>
    <string name="description_standstill_optimization">Adjust torque response at standstill to prevent motor noise and excess vibration</string>
    <string name="rough">Rough</string>
    <string name="medium">Medium</string>
    <string name="soft">Soft</string>
    <string name="standstill_optimization_layman_explanation">
        Changes how the bike reacts to moving from standstill. Rough response accelerates faster but generates noise
        and vibration, soft response is slower but won\'t cause chatter.
    </string>

    <string name="torque_gain">Power gain</string>
    <string name="description_torque_gain">description_torque_gain</string>
    <string name="torque_gain_layman_explanation">
        torque_gain_layman_explanation
    </string>

    <string name="faults">Fault diagnostics</string>
    <string name="description_faults">Actively scan for faults and log those that were caught</string>
    <string name="faults1_header">Faults 1</string>
    <string name="faults2_header">Faults 2</string>
    <string name="faults_placeholder">No faults yet. Scanning continues until you leave this screen.</string>
    <string name="showDebugInfo">Log raw response (debug)</string>

    <string name="dfc">Last DFCs</string>
    <string name="description_dfc">View recent diagnostic fault codes</string>
    <string name="unknown_date">Unknown date</string>

</resources>