<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SpeedSetting">

    <TextView
        android:id="@+id/speed_limit_disabled"
        android:layout_width="260dp"
        android:layout_height="74dp"
        android:layout_marginTop="196dp"
        android:gravity="center"
        android:text="@string/disabled_in_motor"
        android:textColor="@color/pink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.443"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_speed_cancel"
        android:layout_width="128dp"
        android:layout_height="52dp"
        android:layout_marginBottom="56dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_speed_apply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_speed_cancel_large"
        android:layout_width="272dp"
        android:layout_height="52dp"
        android:text="@string/cancel"
        app:backgroundTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_speed_cancel" />

    <Button
        android:id="@+id/button_speed_apply"
        android:layout_width="128dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="56dp"
        android:text="@string/apply"
        app:backgroundTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_speed_cancel" />

    <SeekBar
        android:id="@+id/max_speed_bar"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="311dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="20dp"
        android:indeterminate="false"
        android:max="10"
        android:progress="0"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_limit_header"
        app:tickMarkTint="#00E91E63" />

    <TextView
        android:id="@+id/speed_limit_header"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/set_new_max_speed"
        android:textColor="@color/pink"
        android:textColorHighlight="@color/pink"
        android:textColorLink="@color/pink"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/max_speed_value"
        android:layout_width="166dp"
        android:layout_height="121dp"
        android:layout_marginTop="36dp"
        android:gravity="center|center_vertical"
        android:textColor="@color/pink"
        android:textSize="96sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_limit_header" />

    <TextView
        android:id="@+id/km_per_hour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kmh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/max_speed_value" />

    <TextView
        android:id="@+id/caution"
        android:layout_width="216dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/warningNotTested"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_speed_cancel" />

    <Button
        android:id="@+id/button_disable_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:width="272dp"
        android:height="52dp"
        android:text="@string/disable_speed_limit"
        app:layout_constraintBottom_toTopOf="@+id/button_speed_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_enable_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:width="272dp"
        android:height="52dp"
        android:backgroundTint="@color/pink"
        android:text="@string/enable_speed_limit"
        app:layout_constraintBottom_toTopOf="@+id/button_speed_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/restricted_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="km_per_hour,caution,button_speed_apply,max_speed_value,button_speed_cancel,max_speed_bar,button_disable_limit" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/unrestricted_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="speed_limit_disabled,button_speed_cancel_large,button_enable_limit" />

</androidx.constraintlayout.widget.ConstraintLayout>