<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CbyDiscovery">

    <Button
        android:id="@+id/button_connect"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginBottom="24dp"
        android:text="@string/retry_scan"
        app:backgroundTint="@color/pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/how_to_connect"
        android:layout_width="280dp"
        android:layout_height="74dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/how_to_connect"
        android:textColor="@color/pink"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textview_second" />

    <TextView
        android:id="@+id/no_devices"
        android:layout_width="280dp"
        android:layout_height="74dp"
        android:gravity="center"
        android:text="@string/no_devices"
        android:textColor="@color/pink"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/items_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/items_list"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/bluetooth_off"
        android:layout_width="280dp"
        android:layout_height="74dp"
        android:gravity="center"
        android:text="@string/bluetooth_off"
        android:textColor="@color/pink"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/items_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/items_list"
        app:layout_constraintVertical_bias="0.4" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/items_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:overScrollMode="never"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_connect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/how_to_connect"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/spinner_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_circle"
        app:layout_constraintBottom_toBottomOf="@+id/items_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/items_list"
        app:layout_constraintVertical_bias="0.8" />

    <ProgressBar
        android:id="@+id/loading_spinner"
        style="?android:attr/progressBarStyle"
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintBottom_toBottomOf="@+id/spinner_background"
        app:layout_constraintEnd_toEndOf="@+id/spinner_background"
        app:layout_constraintStart_toStartOf="@+id/spinner_background"
        app:layout_constraintTop_toTopOf="@+id/spinner_background" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="loading_spinner,spinner_background" />
</androidx.constraintlayout.widget.ConstraintLayout>